          an underlying search_rs(), as by design these arguments would be
          used only on the first call to ->related_resultset(), and ignored
          afterwards. Instead an exception (detailing the fix) is thrown.
        - Calling the set_* many-to-many helper with a list (instead of an
          arrayref) now emits a deprecation warning

    * New Features
        - DBIx::Class::Optional::Dependencies now properly understands
          combinations of requirements and does the right thing with e.g.
          ->req_list_for([qw( rdbms_oracle ic_dt )]) bringing in the Oracle
          specific DateTime::Format dependencies

    * Fixes
        - Ensure failing on_connect* / on_disconnect* are dealt with properly,
          notably on_connect* failures now properly abort the entire connect
        - Make sure exception objects stringifying to '' are properly handled
          and warned about (GH#15)
        - Fix corner case of stringify-only overloaded objects being used in
          create()/populate()
        - Fix several corner cases with Many2Many over custom relationships
        - Fix t/52leaks.t failures on compilerless systems (RT#104429)
        - Fix t/storage/quote_names.t failures on systems with specified Oracle
          test credentials while missing the optional Math::Base36
        - Fix the Sybase ASE storage incorrectly attempting to retrieve an
          autoinc value when inserting rows containing blobs (GH#82)
        - Fix test failures when DBICTEST_SYBASE_DSN is set (unnoticed change
          in error message wording during 0.082800 and a bogus test)

    * Misc
        - Fix invalid variable names in ResultSource::View examples
        - Skip tests in a way more intelligent and speedy manner when optional
          dependencies are missing
        - Make the Optional::Dependencies error messages cpanm-friendly
        - Incompatibly change values (not keys) of the hash returned by